fix z-index

--- a/vsas/src/Layout/Header/header.module.scss
+++ b/vsas/src/Layout/Header/header.module.scss
@@ -7,13 +7,16 @@
   align-items: center;
   padding: 0 60px;
   color: #000;
+  background-color: rgba(#faf7f6, 0.5);
+  backdrop-filter: blur(2px);
+  z-index: 1;
 
-  @media (max-width: 1199px) {
-    background-color: rgba(#faf7f6, 0.6);
-    backdrop-filter: blur(2px);
+  //@media (max-width: 1199px) {
+  //  background-color: rgba(#faf7f6, 0.2);
+  //  backdrop-filter: blur(2px);
 
-    z-index: 2;
-  }
+  //  z-index: 1;
+  //}
   @media (max-width: 992px) {
     width: 88%;
   }
