--- a/vsas/src/components/ModalPost/modalpost.module.scss
+++ b/vsas/src/components/ModalPost/modalpost.module.scss
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  z-index: 1000000;
+  z-index: 101;
 }
 
 .content::-webkit-scrollbar {
@@ -26,6 +26,7 @@
   position: relative;
   max-height: 90vh;
   overflow-y: auto;
+  z-index: 101;
 
   width: 590px;
   padding: 20px 20px 0;
@@ -35,8 +36,8 @@
   transform: scale(0);
   transition: 0.2s all;
   @media (max-width: 1199px) {
-    max-height: 75vh;
-    margin-top: 100px;
+    //max-height: 75vh;
+    //margin-top: 100px;
   }
 }
 
