--- a/vsas/src/pages/Profile/profile.module.scss
+++ b/vsas/src/pages/Profile/profile.module.scss
@@ -1,5 +1,5 @@
 .container {
-  margin: 0 0 80px;
+  margin: 20px 0 80px;
   padding: 20px;
   max-width: 100%;
   display: flex;
@@ -17,7 +17,6 @@
   text-align: center;
   margin: 0 auto;
   padding: 0px;
-  z-index: 1;
 
   @media (max-width: 768px) {
     width: 700px;
